[package]
name = "wake-rs"
version = "0.2.3"
authors = ["Vladimir K <ew1abz@gmail.com>"]
license = "MIT"
readme = "README.md"
categories = ["embedded", "encoding"]
edition = "2021"
description = "Wake protocol library written in Rust"
repository = "https://github.com/ew1abz/wake-rs"
keywords = ["wake", "serialization", "serial", "protocol", "embedded"]
documentation = "https://docs.rs/wake-rs"

[dev-dependencies.serialport]
version = "4.0.1"
default-features = false

[dev-dependencies]
rand = "0.8.4"
